--- a/coba.html
+++ b/coba.html
@@ -6,6 +6,8 @@
 
 <body>
 <h1> Teknik Informatika Politeknik Negeri Jember 2019-2020</h1>
+<p> Ini adalah sebuah <em>paragraf</em> </p>
+<a href="http://www.jti.polije.ac.id">ini adalah sebuah link</a>
 </body>
 
 </html>
