--- a/coba.html
+++ b/coba.html
@@ -1,13 +1,24 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title> Praktikum SI WEB</title>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+<title>Belajar JavaScript</title>
+
+<script>
+window.onload = function()
+{
+   var hasil;
+   hasil = 1+3+5+7+9;
+   document.getElementById("tempat_hasil").innerHTML=hasil;
+}
+</script>
+
 </head>
-
+ 
 <body>
-<h1> Teknik Informatika Politeknik Negeri Jember 2019-2020</h1>
-<p> Ini adalah sebuah <em>paragraf</em> </p>
-<a href="http://www.jti.polije.ac.id">ini adalah sebuah link</a>
+<h1>Belajar JavaScript</h1>
+<p> Saya sedang belajar JavaScript di jti.polije.com </p>
+<div id="tempat_hasil">
+</div>
 </body>
-
 </html>
